--- a/index.html
+++ b/index.html
@@ -10,16 +10,52 @@
             <h1>Skye Nguyen</h1>
             <nav>
                 <ul>
-                    <li><a href="#"></a>About Me</a></li>
-                    <li><a href="#"></a>Projects</a></li>
-                    <li><a href="#"></a>Background</a></li>
-                    <li><a href="#"></a>Hobbies</a></li>
+                    <li><a href="#about-me"></a>About Me</a></li>
+                    <li><a href="#projects"></a>Projects</a></li>
+                    <li><a href="#background"></a>Background</a></li>
+                    <li><a href="#hobbies"></a>Hobbies</a></li>
                 </ul>
             </nav>
             <img src="img/profile.jpg" alt="profile picture" width=50%/>
         </header>
-        <main>
-
+        <main class="container">
+            <div id="about-me">
+                <h3>About Me</h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic 
+                </p>
+            </div>
+            <div id="projects">
+                <h3>Projects</h3>
+                <div class="row">
+                    <div class="col-md-4">
+                      Project Name
+                    </div>
+                    <div class="col-md-4">
+                      Descriptions
+                    </div>
+                    <div class="col-md-4">
+                      Link/Demo
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-4">
+                      1 of 3
+                    </div>
+                    <div class="col-md-4">
+                      2 of 3 (wider)
+                    </div>
+                    <div class="col-md-4">
+                      3 of 3
+                    </div>
+                  </div>
+            </div>
+            <div id="background">
+                <h3>Background</h3>
+            </div>
+            <div id="hobbies">
+                <h3>Hobbies</h3>
+            </div>
         </main>
         <footer>
 
