add projects and hobbies

--- a/index.html
+++ b/index.html
@@ -1,64 +1,141 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Skye Nguyen</title>
-        <link href="css/bootstrap.css" rel="stylesheet" text="css/text" media="all"/>
-        <link href="css/styles.css" rel="stylesheet" text="css/text" media="all"/>
-    </head>
-    <body>
-        <header>
-            <h1>Skye Nguyen</h1>
-            <nav>
-                <ul>
-                    <li><a href="#about-me"></a>About Me</a></li>
-                    <li><a href="#projects"></a>Projects</a></li>
-                    <li><a href="#background"></a>Background</a></li>
-                    <li><a href="#hobbies"></a>Hobbies</a></li>
-                </ul>
-            </nav>
-            <img src="img/profile.jpg" alt="profile picture" width=50%/>
-        </header>
-        <main class="container">
-            <div id="about-me">
-                <h3>About Me</h3>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic 
-                </p>
-            </div>
-            <div id="projects">
-                <h3>Projects</h3>
-                <div class="row">
-                    <div class="col-md-4">
-                      Project Name
-                    </div>
-                    <div class="col-md-4">
-                      Descriptions
-                    </div>
-                    <div class="col-md-4">
-                      Link/Demo
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-4">
-                      1 of 3
-                    </div>
-                    <div class="col-md-4">
-                      2 of 3 (wider)
-                    </div>
-                    <div class="col-md-4">
-                      3 of 3
-                    </div>
-                  </div>
-            </div>
-            <div id="background">
-                <h3>Background</h3>
-            </div>
-            <div id="hobbies">
-                <h3>Hobbies</h3>
-            </div>
-        </main>
-        <footer>
 
-        </footer>
-    </body>
+<head>
+    <title>Skye Nguyen</title>
+    <link href="css/bootstrap.css" rel="stylesheet" text="css/text" media="all" />
+    <link href="css/styles.css" rel="stylesheet" text="css/text" media="all" />
+</head>
+
+<body>
+    <header>
+        <h1>Skye Nguyen</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#about-me"></a>About Me</a>
+                </li>
+                <li>
+                    <a href="#projects"></a>Projects</a>
+                </li>
+                <li>
+                    <a href="#background"></a>Background</a>
+                </li>
+                <li>
+                    <a href="#hobbies"></a>Hobbies</a>
+                </li>
+            </ul>
+        </nav>
+        <img src="img/profile.jpg" alt="profile picture" width=50%/>
+    </header>
+    <main class="container">
+        <div id="about-me">
+            <h3>About Me</h3>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                specimen book. It has survived not only five centuries, but also the leap into electronic
+            </p>
+        </div>
+        <div id="projects">
+            <h3>Projects</h3>
+            <div class="row">
+                <div class="col-md-4">
+                    Title
+                </div>
+                <div class="col-md-4">
+                    Description
+                </div>
+                <div class="col-md-4">
+                    Link/Demo
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    Cospedia
+                </div>
+                <div class="col-md-4">
+                    2 of 3 (wider)
+                </div>
+                <div class="col-md-4">
+                    3 of 3
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    Animal Shelter
+                </div>
+                <div class="col-md-4">
+                    2 of 3 (wider)
+                </div>
+                <div class="col-md-4">
+                    3 of 3
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    Island Resort
+                </div>
+                <div class="col-md-4">
+                    2 of 3 (wider)
+                </div>
+                <div class="col-md-4">
+                    3 of 3
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    Election Result Map
+                </div>
+                <div class="col-md-4">
+                    2 of 3 (wider)
+                </div>
+                <div class="col-md-4">
+                    3 of 3
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    Cat Clock
+                </div>
+                <div class="col-md-4">
+                    2 of 3 (wider)
+                </div>
+                <div class="col-md-4">
+                    3 of 3
+                </div>
+            </div>
+        </div>
+        <div id="background">
+            <h3>Background</h3>
+        </div>
+        <div id="hobbies">
+            <h3>Hobbies</h3>
+            <div class="row">
+                <div class="col-md-4">
+                    <h4>Dota 2</h4>
+                    <img src="img/dota.jpg" alt="profile picture" width=50%/>
+                </div>
+                <div class="col-md-4">
+                    <h4>Makeup</h4>
+                    <img src="img/makeup-unsplash.jpg" alt="profile picture" width=50%/>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <h4>OrangeTheory Fitness</h4>
+                    <img src="img/otf-logo.png" alt="profile picture" width=50%/>
+                </div>
+                <div class="col-md-4">
+                    <h4>Hiking</h4>
+                    <img src="img/hiking.jpg" alt="profile picture" width=50%/>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
+</body>
+
 </html>
