--- a/index.html
+++ b/index.html
@@ -33,83 +33,91 @@
         </div>
     </header>
     <main class="container">
-        <div id="about-me">
-            <h3>About Me</h3>
-            <img src="img/profile.jpg" alt="profile picture" width=50%/>
-            <div id="about-me-float">
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
-                    text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                    specimen book. It has survived not only five centuries, but also the leap into electronic
-                </p>
+        <div class="card" id="about-me">
+            <div class="card-header">
+                <h3 class="card-title">About Me</h3>
+            </div>
+            <div class="card-body">
+                <img src="img/profile.jpg" alt="profile picture" width=50% id="profile"/>
+                <div id="about-me-float">
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                        text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+                        a type specimen book. It has survived not only five centuries, but also the leap into electronic
+                    </p>
+                </div>
             </div>
         </div>
-        <div id="projects">
-            <h3>Projects</h3>
-            <div class="row">
-                <div class="col-md-4">
-                    Title
-                </div>
-                <div class="col-md-4">
-                    Description
-                </div>
-                <div class="col-md-4">
-                    Link/Demo
-                </div>
+        <div class="card" id="projects">
+            <div class="card-header">
+                <h3 class="card-title">Projects</h3>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    Cospedia
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-4">
+                        Title
+                    </div>
+                    <div class="col-md-4">
+                        Description
+                    </div>
+                    <div class="col-md-4">
+                        Link/Demo
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    2 of 3 (wider)
+                <div class="row">
+                    <div class="col-md-4">
+                        Cospedia
+                    </div>
+                    <div class="col-md-4">
+                        2 of 3 (wider)
+                    </div>
+                    <div class="col-md-4">
+                        3 of 3
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    3 of 3
+                <div class="row">
+                    <div class="col-md-4">
+                        Animal Shelter
+                    </div>
+                    <div class="col-md-4">
+                        2 of 3 (wider)
+                    </div>
+                    <div class="col-md-4">
+                        3 of 3
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    Animal Shelter
+                <div class="row">
+                    <div class="col-md-4">
+                        Island Resort
+                    </div>
+                    <div class="col-md-4">
+                        2 of 3 (wider)
+                    </div>
+                    <div class="col-md-4">
+                        3 of 3
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    2 of 3 (wider)
+                <div class="row">
+                    <div class="col-md-4">
+                        Election Result Map
+                    </div>
+                    <div class="col-md-4">
+                        2 of 3 (wider)
+                    </div>
+                    <div class="col-md-4">
+                        3 of 3
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    3 of 3
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    Island Resort
-                </div>
-                <div class="col-md-4">
-                    2 of 3 (wider)
-                </div>
-                <div class="col-md-4">
-                    3 of 3
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    Election Result Map
-                </div>
-                <div class="col-md-4">
-                    2 of 3 (wider)
-                </div>
-                <div class="col-md-4">
-                    3 of 3
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    Cat Clock
-                </div>
-                <div class="col-md-4">
-                    2 of 3 (wider)
-                </div>
-                <div class="col-md-4">
-                    3 of 3
+                <div class="row">
+                    <div class="col-md-4">
+                        Cat Clock
+                    </div>
+                    <div class="col-md-4">
+                        2 of 3 (wider)
+                    </div>
+                    <div class="col-md-4">
+                        3 of 3
+                    </div>
                 </div>
             </div>
         </div>
@@ -172,6 +180,7 @@
             </div>
         </div>
     </main>
+
     <footer>
 
     </footer>
