add bootstrap and CSS stylings

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Skye Nguyen</title>
     <link href="css/bootstrap.css" rel="stylesheet" text="css/text" media="all" />
     <link href="css/styles.css" rel="stylesheet" text="css/text" media="all" />
-    <link href="https://fonts.googleapis.com/css?family=Lobster+Two:700|Tinos" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Tinos" rel="stylesheet">
 </head>
 
 <body>
@@ -17,16 +17,16 @@
             <div class="navbar">
                 <nav>
                     <ul>
-                        <li>
+                        <li class="navbar-li">
                             <a class="navbar-link" href="#about-me">About Me</a>
                         </li>
-                        <li>
+                        <li class="navbar-li">
                             <a class="navbar-link" href="#projects">Projects</a>
                         </li>
-                        <li>
+                        <li class="navbar-li">
                             <a class="navbar-link" href="#background">Background</a>
                         </li>
-                        <li>
+                        <li class="navbar-li">
                             <a class="navbar-link" href="#hobbies">Hobbies</a>
                         </li>
                     </ul>
@@ -130,66 +130,70 @@
         </div>
         <div class="card" id="background">
             <div class="card-header">
-                <h3>Background</h3>
+                <h3 class="card-title">Background</h3>
             </div>
             <div class="card-body">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-md-3">
                         <span>Education</span>
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-9">
                         Bachelor of Science in Chemical Engineering with a concentration in Polymers.
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col-md-3">
                         <span>Previous Experience</span>
                     </div>
-                    <div class="col-5">
-                        
+                    <div class="col-md-9">
+                        <ul>
+                            <li class="experience">Sales Engineering - Aerospace - Klinger IGI, Inc</li>
+                            <li class="experience">Process Improvement Engineer - Industrial Construction - Carlisle Construction Materials</li>
+                            <li class="experience">Material Engineer - Oil &amp; Gas - Parker Hannifin</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col-md-3">
                         <span>Why I code</span>
                     </div>
-                    <div class="col-5">
+                    <div class="col-md-9">
                         <span>rfbwuierfwuierfweurf</span>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col-md-3">
                         <span>Awards</span>
                     </div>
-                    <div class="col-5">
+                    <div class="col-md-9">
                         <span>rfbwuierfwuierfweurf</span>
                     </div>
                 </div>
             </div>
 
         </div>
-        <div class="card" id="hobbies">
+        <div class="card hobbies-card" id="hobbies">
             <div class="card-header">
-                <h3>Hobbies</h3>
+                <h3 class="card-title">Hobbies</h3>
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <span>Dota 2</span>
-                    <img src="img/dota.jpg" alt="dota 2 wallpaper" width=50%/>
+                    <span>Dota 2</span><br>
+                    <img class="hobbies" src="img/dota.jpg" alt="dota 2 wallpaper" width=50%/>
                 </div>
                 <div class="col-md-6">
-                    <span>Makeup</span>
-                    <img src="img/makeup-unsplash.jpg" alt="makeup bag" width=50%/>
+                    <span>Makeup</span><br>
+                    <img class="hobbies" src="img/makeup-unsplash.jpg" alt="makeup bag" width=50%/>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <span>OrangeTheory Fitness</span>
-                    <img src="img/otf-logo.png" alt="otf logo" width=50%/>
+                    <span>OrangeTheory Fitness</span><br>
+                    <img class="hobbies" src="img/otf-logo.png" alt="otf logo" width=50%/>
                 </div>
                 <div class="col-md-6">
-                    <span>Hiking</span>
-                    <img src="img/hiking.jpg" alt="hiking" width=50%/>
+                    <span>Hiking</span><br>
+                    <img class="hobbies" src="img/hiking.jpg" alt="hiking" width=50%/>
                 </div>
             </div>
         </div>
