add stylings to about me section

--- a/index.html
+++ b/index.html
@@ -43,12 +43,18 @@
             <div class="card-body">
                 <img src="img/profile.jpg" alt="profile picture" width=50% id="profile" />
                 <div id="about-me-float">
-                    <p> I am originally from Viet Nam and have been living in the States for about seven years now. I spent five
-                        of these years living and studying in northen Indiana before moving to Seattle last summer. I consider
-                        myself a
-                        <em>diversity promotor</em>, inspiring team leader and a
+                    <p> I am originally from Viet Nam and have been living in the United States for about seven years now. I spent five of these years living and studying in northern Indiana before moving to Seattle last summer.
+                        I consider myself a <em>diversity promotor</em>, a reliable teammate, and a
                         <strong>creative problem solver</strong>.
                     </p>
+                    <p>I am currently attending Epicodus C# and React track full-time, which will commence in February, 2019.</p>
+                    
+                    <ol>
+                            <span>Short-term Goals</span>
+                        <li>Improve my programming skills</li>
+                        <li>Explore and apply programming best practices</li>
+                        <li>Establish meaningful relationships with people of common interests</li>
+                    </ol>
                 </div>
             </div>
         </div>
@@ -58,11 +64,11 @@
             </div>
             <div class="card-body">
                 <div class="row title-row">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <h6>Title
                             <h6>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-5">
                         <h6>Description
                             <h6>
                     </div>
@@ -72,10 +78,10 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <span>Cospedia</span>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-5">
                         <p>A react-native mobile application that keeps track of your makeup expiration dates. </p>
                     </div>
                     <div class="col-md-4">
@@ -83,10 +89,43 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
+                        <div class="col-md-3">
+                            <span>Magic 8 Ball</span>
+                        </div>
+                        <div class="col-md-5">
+                            <p>A responsive magic-8-ball that gives answer when a question is entered, built using HTML, CSS and JavaScript.</p>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="https://skye.dames.es/magic-8-ball/"> Live Demo</a>
+                        </div>
+                    </div>
+                <div class="row">
+                        <div class="col-md-3">
+                            <span>Election Result Map</span>
+                        </div>
+                        <div class="col-md-5">
+                            <p>A responsive election map based on the electoral college system, built using HTML, CSS and JavaScript.</p>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="https://github.com/sn31/election-map"> GitHub Repository</a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <span>Cat Clock</span>
+                        </div>
+                        <div class="col-md-5">
+                            <p>A responsive clock that changes the main cat picture based on the time of the visit.</p>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="https://skye.dames.es/lolcat-clock/">Live Demo</a>
+                        </div>
+                    </div>
+                <div class="row">
+                    <div class="col-md-3">
                         <span>Animal Shelter</span>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-5">
                        <p>A static one-page website of a mock animal shelter, built using HTML and CSS.</p>
                     </div>
                     <div class="col-md-4">
@@ -94,36 +133,14 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <span>Island Resort</span>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-5">
                         <p>A responsive multi-page website of a mock island resort, built using HTML and CSS.</p>
                     </div>
                     <div class="col-md-4">
                         <a href="https://sn31.github.io/island-resort/"> GitHub Pages</a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <span>Election Result Map</span>
-                    </div>
-                    <div class="col-md-4">
-                        <p>A responsive election map based on the electoral college system, built using HTML, CSS and JavaScript.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <a href="https://github.com/sn31/election-map"> GitHub Repository</a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <span>Cat Clock</span>
-                    </div>
-                    <div class="col-md-4">
-                        <p>A responsive clock that changes the main cat picture based on the time of the visit.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <a href="https://skye.dames.es/lolcat-clock/">Live Demo</a>
                     </div>
                 </div>
             </div>
@@ -135,7 +152,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-3">
-                        <span>Education</span>
+                        <span class="glyphicons glyphicons-education">Education</span>
                     </div>
                     <div class="col-md-9">
                         Bachelor of Science in Chemical Engineering with a concentration in Polymers.
@@ -198,7 +215,7 @@
             </div>
         </div>
     </main>
-
+   
     <footer>
 
     </footer>
